[package]
name = "twofa-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.2.1"
base32 = "0.5.1"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.11.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
totp-rs = "5.4.0"
uuid = { version = "1.2.2", features = ["v4"] }
